# akta

./: .gitignore  Makefile  README.md  agent.json  agent_charlie_delegated_skills.json  dod.json  pyproject.toml  pytest.ini  signed_bob_vc.json  signed_charlie_delegated_vc.json  signedod.json  test_delegation_workflow.sh  test_delegation_workflow_did_web.sh  unsigned_bob_vc.json  unsigned_charlie_delegated_vc.json
.cursor/rules/: code-quality.mdc  database-migration.mdc  fastapi.mdc  project-base.mdc  python.mdc  security.mdc
akta/: cli.py  config.py  credentials.py  did.py  exceptions.py  logging.py  models.py  server.py  utils.py
akta/a2a/: models.py
akta/commands/: claim.py  keys.py  registry.py  token.py  vdr.py
akta/test_agent/: router.py
akta/utils/: key_utils.py
akta/vdr/: crud.py  database.py  models.py  router.py  schemas.py
tests/: test_cli.py
tests/commands/: test_claim.py  test_keys.py  test_registry.py  test_token.py  test_vdr.py
