[project]
name = "akta"
version = "0.1.0"
author = "Luke Hinds, Red Dot Rocket Ltd"
description = "Akta is a library for managing DIDs, VCs, and VDRs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "click>=8.2.1",
    "pydantic-settings>=2.9.1",
    "pynacl>=1.5.0",
    "pyld>=2.0.4",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.41",
    "pytest-mock>=3.14.0",
    "python-json-logger>=3.3.0",
    "a2a-sdk>=0.2.5",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["akta/*"]


[project.scripts]
akta = "akta.cli:cli"
